--- a/index.Rmd
+++ b/index.Rmd
@@ -39,7 +39,15 @@ mean_eminem <- Eminem %>%
 ### Introduction
 
 TODO: Tekst readme plakken
+Computational musicology Corpus idea:
 
+How did famous rapper Eminem's style change through te years. From his firsts single "I just dont give a f*ck" in 1998 to one of hist latest songs "The adventures of moon man and slim shady" in 2020.
+
+I chose this corpus, since Eminem is one of my favorite artists of all time. I find myself coming back to his songs on the regular and even went to his last tour in the Netherlands. Eminem has many singles and albums published through the years and all are surounded by some sort of controversion. Eminem even raps about the fact that some of his fans want the old slim shady back, but that he is not that person anymore. I want to check in what degree this statement holds when comparing his music through the years.
+
+Eminem's total of eleven studio albums make a great music library to compare on various aspects. In these albums Eminem changed up his rap game by collabing with artist and go for a more mainstream pop song. I want to see if this has happened more later on or if he did this before as well. Furthermore eminem is known for his many words per second in songs such as "rap god" or "Godzilla"
+
+A possiblie weakness for the corpus might eb that some songs appear on multiple albums. On the one hand this shows that an artist is proud of a certain song and places it in more places. On the other hand i might have to look at the representations of these songs, to not get an unfair advantage or skew the data.
 
 ***
 
